# qtquickcontrols-nemo

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt
examples/sizeview/: CMakeLists.txt  glacier-sizeview.qml  glacier-sizeview.qrc  main.cpp
examples/touch/: CMakeLists.txt  glacier-components.qml  glacier-components.qrc  touch.pro
examples/touch/content/: BrokenPage.qml  ButtonPage.qml  ButtonRowPage.qml  CheckboxPage.qml  DatePickerPage.qml  DialogsPage.qml  IconPage.qml  LabelPage.qml  ListViewPage.qml  LiveCoding.qml  NemoIconPage.qml  NotificationsPage.qml  ProgressBarPage.qml  RingIndicatorPage.qml  SelectRollerPage.qml  SliderPage.qml  SpinnerPage.qml  StatusNotifyPage.qml  TabBarPage.qml  TextInputPage.qml  TimePickerPage.qml
examples/touch/src/: main.cpp
rpm/: qtquickcontrols-nemo.spec
src/: CMakeLists.txt
src/controls/: CMakeLists.txt  controls.pro  editfilter.cpp  editfilter.h  filteringmousearea.cpp  filteringmousearea.h  inversemousearea.cpp  inversemousearea.h  logging.cpp  logging.h  nemofocussingleton.cpp  nemofocussingleton.h  nemoimageprovider.cpp  nemopage.cpp  nemopage.h  nemowindow.cpp  nemowindow.h  plugin.cpp  plugin.h  qquickfilteringmousearea.cpp  qquickfilteringmousearea.h  qquicknemocontrolsextensionplugin.cpp  qrc_internal_resources.cpp  ringindicator.cpp  ringindicator.h  sizing.cpp  sizing.h  slider.cpp  slider.h  spinner.cpp  spinner.h  theme.cpp  theme.h
src/controls/qml/: ApplicationWindow.qml  Button.qml  ButtonRow.qml  Checkbox.qml  DatePicker.qml  ErrorStackPage.qml  GlacierRoller.qml  GlacierRollerItem.qml  Header.qml  HeaderToolsIndicator.qml  HeaderToolsLayout.qml  IconButton.qml  Label.qml  ListView.qml  ListViewItemWithActions.qml  NemoIcon.qml  Page.qml  ProgressBar.qml  ScrollDecorator.qml  Slider.qml  Spinner.qml  TabButton.qml  TextField.qml  TimePicker.qml  ToolButton.qml  Wallpaper.qml  qmldir
src/controls/qml/dialogs/: CustomDialog.qml  Dialog.qml  QueryDialog.qml  SelectionDialog.qml
src/controls/qml/shaders/: NemoIcon.frag
src/controls/themedaemon/: mabstractthemedaemonclient.h  mlocalthemedaemonclient.cpp  mlocalthemedaemonclient.h
src/core/: CMakeLists.txt  logging.cpp  logging.h  nemo.json  nemocoreplugin.pc.in  nemoimageprovider.cpp  nemoimageprovider.h  plugin.cpp  plugin.h  qmldir  sizing.cpp  sizing.h  theme.cpp  theme.h
src/core/themedaemon/: mabstractthemedaemonclient.cpp  mlocalthemedaemonclient.cpp  mlocalthemedaemonclient.h
src/dialogs/: CMakeLists.txt
src/dialogs/qml/: CustomDialog.qml  Dialog.qml  QueryDialog.qml  SelectionDialog.qml  qmldir
src/models/: CMakeLists.txt  calendarmodel.cpp  calendarmodel.h  plugin.cpp  plugin.h
src/styles/: CMakeLists.txt  SliderStyle.qml  qquicknemostyleextensionplugin.cpp  qquicknemostyleextensionplugin.h  styles.pro
src/styles/qml/: ButtonStyle.qml  SliderStyle.qml  TabViewStyle.qml  TextFieldStyle.qml  ToolBarStyle.qml
src/styles/themes/: glacier_black.json  glacier_black_purple.json  glacier_orange.json  glacier_white.json
src/styles/virtualkeyboard/: style.qml
tests/: CMakeLists.txt
tests/common/: qmltest.cpp  qmltest.h
tests/ut_coreTheme/: CMakeLists.txt  testTheme.json  ut_coretheme.cpp  ut_coretheme.h
tests/ut_imageProvider/: CMakeLists.txt  ut_imageprovider.cpp  ut_imageprovider.h
tests/ut_nemoPage/: CMakeLists.txt  ut_nemopage.cpp  ut_nemopage.h
tests/ut_qmlActionButton/: CMakeLists.txt  test.qml  ut_qmlactionbutton.cpp  ut_qmlactionbutton.h
tests/ut_qmlApplicationWindow/: CMakeLists.txt  test.qml  ut_qmlapplicationwindow.cpp  ut_qmlapplicationwindow.h
tests/ut_qmlButton/: CMakeLists.txt  test.qml  ut_qmlbutton.cpp  ut_qmlbutton.h
tests/ut_qmlButtonRow/: CMakeLists.txt  test.qml  ut_qmlbuttonrow.cpp  ut_qmlbuttonrow.h
tests/ut_qmlCheckbox/: CMakeLists.txt  test.qml  ut_qmlcheckbox.cpp  ut_qmlcheckbox.h
tests/ut_qmlDatePicker/: CMakeLists.txt  test.qml  ut_qmldatepicker.cpp  ut_qmldatepicker.h
tests/ut_qmlGlacierRoller/: CMakeLists.txt  test.qml  ut_qmlglacierroller.cpp  ut_qmlglacierroller.h
tests/ut_qmlGlacierRollerItem/: CMakeLists.txt  test.qml  ut_qmlglacierrolleritem.cpp  ut_qmlglacierrolleritem.h
tests/ut_qmlHeader/: CMakeLists.txt  test.qml  ut_qmlheader.cpp  ut_qmlheader.h
tests/ut_qmlHeaderToolsIndicator/: CMakeLists.txt  test.qml  ut_qmlheadertoolsindicator.cpp  ut_qmlheadertoolsindicator.h
tests/ut_qmlHeaderToolsLayout/: CMakeLists.txt  test.qml  ut_qmlheadertoolslayoyt.cpp  ut_qmlheadertoolslayoyt.h
tests/ut_qmlIconButton/: CMakeLists.txt  test.qml  ut_qmliconbutton.cpp  ut_qmliconbutton.h
tests/ut_qmlLabel/: CMakeLists.txt  test.qml  ut_qmllabel.cpp  ut_qmllabel.h
tests/ut_qmlListView/: CMakeLists.txt  test.qml  ut_qmllistview.cpp  ut_qmllistview.h
tests/ut_qmlListViewItemWithActions/: CMakeLists.txt  test.qml  ut_qmllistviewitemwithactions.cpp  ut_qmllistviewitemwithactions.h
tests/ut_qmlNemoIcon/: CMakeLists.txt  test.qml  ut_qmlnemoicon.cpp  ut_qmlnemoicon.h
tests/ut_qmlPage/: CMakeLists.txt  test.qml  ut_qmlpage.cpp  ut_qmlpage.h
tests/ut_qmlProgressBar/: CMakeLists.txt  test.qml  ut_qmlprogressbar.cpp  ut_qmlprogressbar.h
tests/ut_qmlScrollDecorator/: CMakeLists.txt  test.qml  ut_qmlscrolldecorator.cpp  ut_qmlscrolldecorator.h
tests/ut_qmlSlider/: CMakeLists.txt  test.qml  ut_qmlslider.cpp  ut_qmlslider.h
tests/ut_qmlSpinner/: CMakeLists.txt  test.qml  ut_qmlspinner.cpp  ut_qmlspinner.h
tests/ut_qmlTabButton/: CMakeLists.txt  test.qml  ut_qmltabbutton.cpp  ut_qmltabbutton.h
tests/ut_qmlTextField/: CMakeLists.txt  test.qml  ut_qmltextfield.cpp  ut_qmltextfield.h
tests/ut_qmlTimePicker/: CMakeLists.txt  test.qml  ut_qmltimepicker.cpp  ut_qmltimepicker.h
tests/ut_qmlToolButton/: CMakeLists.txt  test.qml  ut_qmltoolbutton.cpp  ut_qmltoolbutton.h
