set(xvfbParam -a -s "-screen 0 1280x1024x24")
add_definitions(-DUNIT_TEST=1)
add_definitions(-DSOURCE_DIR="${CMAKE_SOURCE_DIR}")
add_definitions(-DBUILD_DIR="${CMAKE_BINARY_DIR}")
add_subdirectory(ut_coreTheme)
add_subdirectory(ut_imageProvider)
add_subdirectory(ut_nemoPage)
add_subdirectory(ut_qmlActionButton)
#QQuickView does not support using a window as a root item.
#add_subdirectory(ut_qmlApplicationWindow)
add_subdirectory(ut_qmlButton)
add_subdirectory(ut_qmlButtonRow)
add_subdirectory(ut_qmlCheckbox)
add_subdirectory(ut_qmlDatePicker)
